package pattern.observer.study;

public interface Observer {
    public abstract void update(Generator generator);
}
