package pattern.observer.study;

public enum Subject {
    MATH,
    ENGLISH,
    PHISICS,
}
